# Progetto_AeC

./: .gitignore  AddFileHandling.cpp  AddFileHandling.h  AssociateProfessor.cpp  AssociateProfessor.h  CMakeLists.txt  Classroom.cpp  Classroom.h  ConstConversion.hpp  Course.cpp  Course.h  CourseOfStudy.cpp  CourseOfStudy.h  Date.cpp  Date.h  ErrorEnumerator.h  ErrorHandling.cpp  ErrorHandling.h  FieldVerificationForScheduling.cpp  FieldVerificationForScheduling.h  FillDatabaseList.cpp  FillDatabaseList.h  FindSomethingInList.cpp  FindSomethingInList.h  InsertFileHandling.cpp  InsertFileHandling.h  OutputOnDatabaseHandling.cpp  OutputOnDatabaseHandling.h  PatternConstrainVerification.cpp  PatternConstrainVerification.h  Person.cpp  Person.h  Professor.cpp  Professor.h  SchedulingChecks.cpp  SchedulingChecks.h  SchedulingHandling.cpp  SchedulingHandling.h  SessionScheduler.cpp  SessionScheduler.h  (+8 more)
File_Test/File_Test_0/: README.txt  automateGenCLASSROOM_00.txt  automateGenCLASSROOM_00_con_errori.txt  automateGenCOURSE_00.txt  automateGenINSERTCOURSE_00.txt  automateGenPERSON_00_professori_con_errori.txt  automateGenPERSON_00_studenti.txt  automateGenPERSON_00_studenti_con_errori.txt  automateGenUNAVAILABILITY_2019-2020_00.txt  automateGenUNAVAILABILITY_2020-2021_00.txt  automateGenUNAVAILABILITY_2021-2022_00.txt  automateGenUPDATECLASSROOM_00 copia.txt  automateGenUPDATECLASSROOM_00_con_errori.txt  automateGenUPDATEPROFESSOR_00_con_errori.txt  automateGenUPDATESTUDENTS_00.txt
File_Test/File_Test_2/: automateGenPERSON_02.txt  (+4 more)
RELAZIONE/: Calendario_Test_Progetto.numbers
(+38 files in other folders)
