cmake_minimum_required(VERSION 3.22)
project(Progetto)

set(CMAKE_CXX_STANDARD 14)

add_executable(Progetto main.cpp Person.cpp Professor.cpp Date.cpp Student.cpp Classroom.cpp AssociateProfessor.cpp Course.cpp CourseOfStudy.cpp AddFileHandling.cpp FindSomethingInList.cpp PatternConstrainVerification.cpp UpdateFileHandling.cpp InsertFileHandling.cpp FillDatabaseList.cpp OutputOnDatabaseHandling.cpp ErrorHandling.cpp SchedulingChecks.cpp ConstConversion.hpp FieldVerificationForScheduling.cpp SessionScheduler.cpp)
